added clipping, merging, looping media source samples

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         </activity>
 
         <activity android:name=".ExtractorMediaSourceActivity"/>
+        <activity android:name=".ClippingMediaSourceActivity"/>
+        <activity android:name=".LoopingMediaSourceActivity"/>
+        <activity android:name=".MergingMediaSourceActivity"/>
+        <activity android:name=".ConcatenatingMediaSourceActivity"/>
     </application>
 
 </manifest>
